--- a/faster_rcnn_inception_resnet_v2_atrous_coco.config
+++ b/faster_rcnn_inception_resnet_v2_atrous_coco.config
@@ -105,7 +105,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/model.ckpt"
+  fine_tune_checkpoint: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\Pre-Trained-Model/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -120,7 +120,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\output.record"
+    input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\train.record"
   }
   label_map_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\pascal_label_map.pbtxt"
 }
@@ -134,7 +134,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/mscoco_val.record-?????-of-00010"
+    input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\val.record"
   }
   label_map_path: "PATH_TO_BE_CONFIGURED/mscoco_label_map.pbtxt"
   shuffle: false
