--- a/faster_rcnn_inception_resnet_v2_atrous_coco.config
+++ b/faster_rcnn_inception_resnet_v2_atrous_coco.config
@@ -136,7 +136,7 @@ eval_input_reader: {
   tf_record_input_reader {
     input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\val.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/mscoco_label_map.pbtxt"
+  label_map_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\pascal_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
