--- a/pipeline.config
+++ b/pipeline.config
@@ -105,7 +105,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\Pre-Trained-Model/model.ckpt"
+  fine_tune_checkpoint: "C:/Users/sixexy/Documents/Career/SEAL_Project/DietSkan/models/research/object_detection/dataset_tools/dietskan/Pre-Trained-Model/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -120,9 +120,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\train.record"
+    input_path: "C:/Users/sixexy/Documents/Career/SEAL_Project/DietSkan/models/research/object_detection/dataset_tools/dietskan/train.record"
   }
-  label_map_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\pascal_label_map.pbtxt"
+  label_map_path: "C:/Users/sixexy/Documents/Career/SEAL_Project/DietSkan/models/research/object_detection/dataset_tools/dietskan/pascal_label_map.pbtxt"
 }
 
 eval_config: {
@@ -134,9 +134,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\val.record"
+    input_path: "C:/Users/sixexy/Documents/Career/SEAL_Project/DietSkan/models/research/object_detection/dataset_tools/dietskan/val.record"
   }
-  label_map_path: "C:\Users\sixexy\Documents\Career\SEAL_Project\DietSkan\models\research\object_detection\dataset_tools\dietskan\pascal_label_map.pbtxt"
+  label_map_path: "C:/Users/sixexy/Documents/Career/SEAL_Project/DietSkan/models/research/object_detection/dataset_tools/dietskan/pascal_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
